fixing css spacing

--- a/src/css/cs.css
+++ b/src/css/cs.css
@@ -34,11 +34,6 @@ header
     }
 }
 
-main
-{
-    color: var(--grey-9);
-}
-
 .labelSection
 {
     display:        flex;
@@ -98,6 +93,8 @@ h1
         h2
         {
             align-self: stretch;
+            margin:     0;
+            padding:    0;
 
             /* typography */
             font-size:      var(--text-xl);
@@ -108,6 +105,8 @@ h1
         p
         {
             align-self: stretch;
+            margin:     0;
+            padding:    0;
             
             filter:     opacity(80%);
         }
@@ -124,6 +123,11 @@ h1
     {
         width:  var(--text-xl);
         height: var(--text-xl);
+    }
+
+    a
+    {
+        color:  var(--grey-9);
     }
 }
 
